--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "next": "15.0.3",
     "openai": "^4.72.0",
     "p-limit": "^6.1.0",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^9.3.2",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^18.3.1",
     "recharts": "^2.13.3",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
